# arena_camera_ros2

./: .gitignore  .gitmodules  Dockerfile  docker_setup_environment.sh  environment.yml  run_docker.sh  setup_enviroment.sh  setup_enviroment_win.bat  setup_environment.py  setup_environment.sh  setup_environment_win.bat
ros2_ws/: features.txt  run_enviroment.sh
ros2_ws/src/arena_camera_node/: CMakeLists.txt  package.xml
ros2_ws/src/arena_camera_node/cmake/: FindFFmpeg.cmake  Findarena_sdk.cmake
ros2_ws/src/arena_camera_node/config/: arena_camera_params.yaml
ros2_ws/src/arena_camera_node/launch/: start_arena_camera.launch.py
ros2_ws/src/arena_camera_node/msg/: CameraSettings.msg
ros2_ws/src/arena_camera_node/src/: ArenaCameraNode.cpp  ArenaCameraNode.h  main.cpp
ros2_ws/src/camera_launch/: package.xml  setup.cfg  setup.py
ros2_ws/src/camera_launch/launch/: camera_launch.launch.py
ros2_ws/src/camera_manager/: package.xml  setup.py
ros2_ws/src/camera_manager/camera_manager/: camera_preview.py  camera_setting.py  setting_gui.py
ros2_ws/src/camera_manager/launch/: camera_manager.launch.py
ros2_ws/src/camera_manager/msg/: CameraSettings.msg
ros2_ws/src/camera_msg/: CMakeLists.txt  package.xml
ros2_ws/src/camera_msg/msg/: CameraSettings.msg
ros2_ws/src/sign_recognition_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/sign_recognition_node/launch/: sign_recognition_node.launch.py
ros2_ws/src/sign_recognition_node/msg/: CameraSettings.msg
ros2_ws/src/sign_recognition_node/sign_recognition_node/: sign_recognition_node_main.py
