<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arena_camera_node</name>
  <version>0.0.1</version>

  <description>Lucid Camera ROS2 Driver Node</description>
  <author>LUCID Vision Labs</author>
  <maintainer email="support@thinklucid.com">LUCID Vision Labs</maintainer>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>camera_msg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>